--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,11 @@ header .logo {
   color: #FFB300;
 }
 
+.skills .skills-columns .skill-column {
+  -webkit-box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.75);
+}
+
 .skills .skills-columns div {
   color: black;
   background-color: white;
