--- a/css/main.scss
+++ b/css/main.scss
@@ -372,6 +372,10 @@ header {
 
   .skills-columns {
 
+    .skill-column {
+      box-shadow: 0px 2px 6px 1px rgba(0,0,0,0.75);
+    }
+
     div {
       color: black;
       background-color: white;
@@ -425,6 +429,7 @@ header {
         }
       }
 
+      
       .skill-front {
         height: 475px;
       }
@@ -448,7 +453,7 @@ header {
         max-width: 350px;
       }
 
-
+      
     }
   }
 }
