--- a/css/main.css
+++ b/css/main.css
@@ -384,6 +384,10 @@ header .logo {
   margin-bottom: 35px;
 }
 
+.portfolio h3 {
+  margin-bottom: 35px;
+}
+
 .portfolio h4 {
   margin: 25px 0;
   color: black;
@@ -492,7 +496,7 @@ header .logo {
 @media (min-width: 1220px) {
   .portfolio .portfolio-item {
     width: 80%;
-    margin: 0 auto 75px;
+    margin: 0 auto 65px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
