--- a/css/main.scss
+++ b/css/main.scss
@@ -467,6 +467,10 @@ header {
     margin-bottom: 35px;
   }
 
+  h3 {
+    margin-bottom: 35px;
+  }
+
   h4 {
     margin: 25px 0;
     color: black;
@@ -586,7 +590,7 @@ header {
 
     .portfolio-item {
       width: 80%;
-      margin: 0 auto 75px;
+      margin: 0 auto 65px;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
